--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,10 @@ spring.datasource.password = 1234
 spring.datasource.testWhileIdle = true
 
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.open-in-view=false
 spring.h2.console.enabled=true
+
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=none
